Added search results display by name and fixed bug (forgot .toLowerCase()) in logic.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,3 +9,11 @@ h1 {
     overflow: auto;
     background-color: darkgrey;
 }
+
+#SearchBarAndResultsPopupContainer {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    justify-content: center;
+    margin: 20px auto;
+}
