--- a/src/components/resultsDisplay/ResultsPopup.css
+++ b/src/components/resultsDisplay/ResultsPopup.css
@@ -4,3 +4,11 @@
     flex-direction: column;
     width: auto;
 }
+
+.positionButton {
+    width: auto;
+    margin: 0px;
+    font-size: 30px;
+    background-color: black;
+    color: white;
+}
